style(style): prevent overlap of clickable headers on preceding links

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -79,3 +79,12 @@ h2 ~ h3
     margin-top: -4rem !important
 h2 + h3
     margin-top: -4rem !important;
+
+.content__default > *:not(h1):not(h2):not(h3):not(h4)
+    @apply relative z-20
+
+h1, h2, h3, h4 
+    @apply z-10
+
+.navbar
+    @apply z-50
